# FastAPI-Avan-ado

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  routers.py
app/: __init__.py  converter.py  routers.py  schamas.py
introducao/: ex_pydantic.py  pyproject.toml
introducao/coroutines/: async_await_overview.py  ex_lanche.py
