[tool.poetry]
name = "fastapi-avan-ado"
version = "0.1.0"
description = ""
authors = ["Auggustto <leonardoaugusto1000a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.5"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
requests = "^2.32.3"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
